Changelog
=========

2.0b2 (2012-01-06)
------------------

* `StandaloneForm` and `Form` do now have a proper `__call__` method,
  returning an ``IResponse`` object.

* Added a redirection exception handling in the `__call__` method of the
  `IHTTPRenderer` forms.

* Updated tests to use the latest changes (split) in the ``cromlech.io``
  and ``cromlech.browser`` package.


2.0b1 (2011-11-24)
------------------

* Added i18n last fixes based on `cromlech.i18n`.


2.0a4 (2011-09-19)
------------------

* Validators are now form-aware.


2.0a3 (2011-08-17)
------------------

* NO_VALUE only if data not present, empty data does not mean no value


2.0a2 (2011-06-13)
------------------

* Added the IGNORE behavior to the Fields collection.


2.0a1 (2011-05-10)
------------------

* we are now working with cromlech stack
* forked and migrated zeam.form
 

1.0b3 (2010-10-27)
------------------

* Util method ``set_fields_data`` now makes sure that, even if a data
  entry doesn't have a corresponding field, it doesn't raise an error,
  as it was supposed to do.


1.0b2 (2010-10-20)
------------------

* Both ``zeam.form`` and ``zope.schema`` Fields are useable in a Form,
  now. The changes have been made in the inline validation, to take
  care of both types.

* Now we are using formErrors from ``zeam.form.base`` Form instead of our
  own formError method.

* The `InvariantsValidation` is now declared thanks to the
  ``dataValidators`` mechanism introduces by ``zeam.form.base`` 1.0.

* The package is now tested under Grok 1.2.


1.0b1 (2010-06-25)
------------------

* The package now uses the latest version of ``zeam.form.base``, that
  separates the `extractData` from the `validateData`. It allows to
  validate invariants in a cleaner way, without overriding generic
  code.

* The DeprecationWarning in invariants validation is gone. It now uses
  the representation of the exception and no longer the `message`
  attribute.
