@@ -3,11 +3,18 @@
 import sys
 import operator
 
+from cromlech.browser import ILayout
+from cromlech.browser.exceptions import HTTPRedirect
+from cromlech.browser.utils import redirect_exception_response
+
+from dolmen.view import query_view_layout
 from dolmen.forms.base.actions import Actions
-from dolmen.forms.base.fields import Fields
-from dolmen.forms.base.markers import NO_VALUE, NO_CHANGE
-from dolmen.forms.base.interfaces import IDataManager
 from dolmen.forms.base.datamanagers import ObjectDataManager
+from dolmen.forms.base.fields import Fields
+from dolmen.forms.base.interfaces import IDataManager
+from dolmen.forms.base.markers import NO_VALUE, NO_CHANGE
+
+from zope.component import queryMultiAdapter
 from zope.event import notify
 from zope.lifecycleevent import Attributes, ObjectModifiedEvent
 
@@ -78,3 +85,18 @@ def extends(*forms, **opts):
         extendComponent('fields')
     else:
         extendComponent(field_type)
+
+
+def form_layout_renderer(name=""):
+    """Factory allowing to generate a form method able to embed a form's
+    rendering inside the layout with the given name.
+    """
+    def form_layout_call(form, *args, **kwargs):
+        try:
+            form.update(*args, **kwargs)
+            form.updateForm()
+            layout = query_view_layout(form.request, form, name)
+            return layout(form.render(*args, **kwargs), view=form)
+        except HTTPRedirect, exc:
+            return redirect_exception_response(form.responseFactory, exc)
+    return form_layout_call
